nivasa-macros/tests/trybuild/websocket_gateway_missing_path.rs
use nivasa_macros::websocket_gateway;

#[websocket_gateway({ namespace: "/chat" })]
struct MissingPathGateway;

fn main() {}
